worked on responsiveness

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#"> DanHansen:-$_</a>
+			<a class="navbar-brand" href="#"> Brand/Logo here</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -41,14 +41,23 @@
 		</div>
 	</nav>
 
-	<!--- Jumbotron -->
-	<div class="jumbotron col-12" style="background-position: center; background-image: url(img/levi-price-8FwiZcXiX_g-unsplash.jpg)">
+	<!-- Intro -->
 
-		<h1 class="text-center" style="color: lightgray">Dan Hansen</h1>
-		<p class="lead text-center" style="color: lightgray">I build software products.</p>
-
+	<div class="d-flex justify-content-center" style="background-color: gray; height: 100vh">
+		<div class="align-self-center align-items-sm-stretch">
+			<h1 class="text-center" style="">Dan Hansen</h1>
+			<p class="lead text-center" style="color: whitesmoke">I build software products.</p>
+			<br>
+			<i class="fab fa-node-js fa-3x"></i>
+			<div style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px"></div>
+			<span class="align-self-center" style="font:2em helvetica neue,open sans,sans-serif">Express</span>
+			<div style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px"></div>
+			<span class="logo-text">ASP.NET</span>
+		</div>
 	</div>
 
+	<!--- Jumbotron -->
+	<div class="jumbotron" style="background-color: #3ba666"></div>
 	<!--- Welcome Section -->
 
 
