--- a/index.html
+++ b/index.html
@@ -44,15 +44,21 @@
 	<!-- Intro -->
 
 	<div class="d-flex justify-content-center" style="background-color: gray; height: 100vh">
-		<div class="align-self-center align-items-sm-stretch">
-			<h1 class="text-center" style="">Dan Hansen</h1>
-			<p class="lead text-center" style="color: whitesmoke">I build software products.</p>
+		<div class="align-self-center align-items-sm-stretch justify-content-center">
+			<h1 class="text-center intro-text" style="">Dan Hansen</h1>
+			<p class="lead text-center" style="color: whitesmoke">I build software products for large enterprises and small organizations.</p>
 			<br>
-			<i class="fab fa-node-js fa-3x"></i>
-			<div style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px"></div>
-			<span class="align-self-center" style="font:2em helvetica neue,open sans,sans-serif">Express</span>
-			<div style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px"></div>
-			<span class="logo-text">ASP.NET</span>
+			<div class="logo-text-container d-flex align-self-center justify-content-center">
+				<i class="fab fa-node-js fa-2x"></i>
+				<div
+					style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
+				</div>
+				<span class="logo-text" style="font:helvetica neue,open sans,sans-serif">Express</span>
+				<div
+					style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
+				</div>
+				<span class="logo-text">ASP.NET</span>
+			</div>
 		</div>
 	</div>
 
