updated layout to move some buttons around

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Complete Bootstrap 4 Website Layout</title>
+	<title>Dan Hansen - Software Developer</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -47,23 +47,41 @@
 		<div class="align-self-center align-items-sm-stretch justify-content-center">
 			<h1 class="text-center intro-text" style="">Dan Hansen</h1>
 			<p class="lead text-center" style="color: whitesmoke">I build software products for large enterprises and small organizations.</p>
+			<div class="d-flex align-self-center justify-content-center">
+					<a role="button" class="btn btn-inverse btn-dark" href="#work">View Work</a>
+				<div
+					style="display: inline-block; margin-left: 12px; margin-right: 12px">
+				</div>
+				<a role="button" class="btn btn-inverse btn-dark" href="#contact">Contact Me</a>
+			</div>
 			<br>
 			<div class="logo-text-container d-flex align-self-center justify-content-center">
-				<i class="fab fa-node-js fa-2x"></i>
-				<div
-					style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
+					<i class="fab fa-linkedin"></i>
+					<div
+						style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
+					</div>
+					<i class="fab fa-github"></i>					<div
+						style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
+					</div>
+					<!-- <a href="https://medium.com/@spag1024"></a> --> <i class="fab fa-medium"></i>
 				</div>
-				<span class="logo-text" style="font:helvetica neue,open sans,sans-serif">Express</span>
-				<div
-					style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
-				</div>
-				<span class="logo-text">ASP.NET</span>
-			</div>
 		</div>
 	</div>
 
 	<!--- Jumbotron -->
-	<div class="jumbotron" style="background-color: #3ba666"></div>
+	<div class="jumbotron" style="background-color: #3ba666">
+			<div class="logo-text-container d-flex align-self-center justify-content-center">
+					<i class="fab fa-node-js fa-2x"></i>
+					<div
+						style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
+					</div>
+					<span class="logo-text" style="font:helvetica neue,open sans,sans-serif">Express</span>
+					<div
+						style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
+					</div>
+					<span class="logo-text">ASP.NET</span>
+				</div>
+	</div>
 	<!--- Welcome Section -->
 
 
