--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
 	</div>
 
 	<!--- Footer -->
+	
 	<div class="d-flex bg-dark justify-content-center" id="footer">
+			<br>
+			<br>
 		<div class="logo-text-container d-flex align-self-center justify-content-center">
 			<i class="fab fa-linkedin"></i>
 			<div style="display: inline-block; margin-left: 12px; margin-right: 12px">
@@ -85,7 +88,10 @@
 			</div>
 			<!-- <a href="https://medium.com/@spag1024"></a> --> <i class="fab fa-medium-m"></i>
 		</div>
+		<br>
+	<br>
 	</div>
+	<!--- Footer -->
 
 
 
