--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	</div>
 
 	<!--- Jumbotron -->
-	<div class="jumbotron" style="background-color: #3ba666">
+	<div style="background-color: #3ba666">
 		<div class="logo-text-container d-flex align-self-center justify-content-center">
 			<i class="fab fa-node-js fa-2x"></i>
 			<div
