--- a/index.html
+++ b/index.html
@@ -59,16 +59,19 @@
 		</div>
 	</div>
 
-	<!--- Jumbotron -->
-	<div style="background-color: #3ba666">
-		<div class="logo-text-container d-flex align-self-center justify-content-center">
+	<!--- project -->
+	<div class="d-flex flex-column justify-content-center" style="background-color: #3ba666">
+		<br>
+		<div class="p-2 justify-content-center align-self-center"><h2>Spending Comparison</h2></div><br>
+		<p>A calculator that uses Bureau of Labor Statistics data to let you compare your spending to similar people.</p>
+		
+		
+		<div class="p-2 logo-text-container d-flex align-self-center justify-content-center">
 			<i class="fab fa-node-js fa-2x"></i>
-			<div
-				style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
+			<div style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
 			</div>
 			<span class="logo-text" style="font:helvetica neue,open sans,sans-serif">Express</span>
-			<div
-				style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
+			<div style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
 			</div>
 			<span class="logo-text">ASP.NET</span>
 		</div>
