working on layout

--- a/index.html
+++ b/index.html
@@ -62,26 +62,43 @@
 	<!--- project -->
 	<div class="d-flex flex-column justify-content-center" style="background-color: #3ba666">
 		<br>
-		<div class="p-2 justify-content-center align-self-center"><h2>Spending Comparison</h2></div><br>
-		<p>A calculator that uses Bureau of Labor Statistics data to let you compare your spending to similar people.</p>
-		
-		
-		<div class="p-2 logo-text-container d-flex align-self-center justify-content-center">
+		<!-- Top row-->
+		<div class=" justify-content-center align-self-center">
+			<h2>Spending Comparison</h2>
+		</div><br>
+
+		<!--Middle row -->
+		<div class="d-flex flex-row justify-content-around" style="padding: 10px">
+			<!-- left col -->
+			<div class="flex-column" style="margin-right: 5px">
+				<img src="img/spendingComparison.JPG" style="width:300px">
+			</div>
+			<!-- right col -->
+			<div class="flex-column" style="margin-left: 5px">
+				<p>A calculator that uses Bureau of Labor Statistics data to compare your spending to similar people.
+				</p>
+			</div>
+		</div>
+
+		<!-- bottom row -->
+		<div class=" logo-text-container d-flex align-self-center justify-content-center">
 			<i class="fab fa-node-js fa-2x"></i>
-			<div style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
+			<div
+				style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
 			</div>
 			<span class="logo-text" style="font:helvetica neue,open sans,sans-serif">Express</span>
-			<div style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
+			<div
+				style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
 			</div>
 			<span class="logo-text">ASP.NET</span>
 		</div>
 	</div>
 
 	<!--- Footer -->
-	
+
 	<div class="d-flex bg-dark justify-content-center" id="footer">
-			<br>
-			<br>
+		<br>
+		<br>
 		<div class="logo-text-container d-flex align-self-center justify-content-center">
 			<i class="fab fa-linkedin"></i>
 			<div style="display: inline-block; margin-left: 12px; margin-right: 12px">
@@ -92,7 +109,7 @@
 			<!-- <a href="https://medium.com/@spag1024"></a> --> <i class="fab fa-medium-m"></i>
 		</div>
 		<br>
-	<br>
+		<br>
 	</div>
 	<!--- Footer -->
 
