--- a/index.html
+++ b/index.html
@@ -60,40 +60,55 @@
 	</div>
 
 	<!--- project -->
-	<div class="d-flex flex-column justify-content-center" style="background-color: #3ba666">
-		<br>
-		<!-- Top row-->
-		<div class=" justify-content-center align-self-center">
-			<h2>Spending Comparison</h2>
-		</div><br>
+	<section style="background-color: #f0f0f0">
+		<div class="container justify-content-center" style="background-color: ##f0f0f0">
+			<br>
+			<!-- Top row-->
+			<div class="row justify-content-center">
+				<div class="col-5 col-sm-5 justify-content-center">
+					<h2 class="">Spending Comparison</h2>
+				</div>
+			</div><br>
 
-		<!--Middle row -->
-		<div class="d-flex flex-row justify-content-around" style="padding: 10px">
-			<!-- left col -->
-			<div class="flex-column" style="margin-right: 5px">
-				<img src="img/spendingComparison.JPG" style="width:300px">
+			<!--Middle row -->
+			<div class="row" style="padding: 10px">
+				<!-- left col -->
+				<div class=" col-5 col-sm">
+					<img src="img/spendingComparison.JPG" style="box-shadow: 2px 2px;">
+				</div>
+				<!-- right col -->
+				<div class="col-5 col-sm">
+					<p>A calculator that uses Bureau of Labor Statistics data to compare your spending to similar
+						people.
+					</p>
+					<h6>Tech used:</h6>
+					<span class="logo-text">ASP.NET MVC</span>
+					<div
+						style="display: inline-block;border-left:2px solid #000;height:20px; margin-left: 12px; margin-right: 12px; margin-top: 15pt">
+					</div>
+					<span class="logo-text">SQL Server</span>
+					<div
+						style="display: inline-block;border-left:2px solid #000;height:20px; margin-left: 12px; margin-right: 12px; margin-top: 15pt">
+					</div>
+					<span class="logo-text">Bootstrap</span>
+				</div>
+
 			</div>
-			<!-- right col -->
-			<div class="flex-column" style="margin-left: 5px">
-				<p>A calculator that uses Bureau of Labor Statistics data to compare your spending to similar people.
-				</p>
+
+			<!-- bottom row -->
+			<div class=" logo-text-container d-flex align-self-center justify-content-center">
+				<i class="fab fa-node-js fa-2x"></i>
+				<div
+					style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
+				</div>
+				<span class="logo-text" style="font:helvetica neue,open sans,sans-serif">Express</span>
+				<div
+					style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
+				</div>
+				<span class="logo-text">ASP.NET</span>
 			</div>
 		</div>
-
-		<!-- bottom row -->
-		<div class=" logo-text-container d-flex align-self-center justify-content-center">
-			<i class="fab fa-node-js fa-2x"></i>
-			<div
-				style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
-			</div>
-			<span class="logo-text" style="font:helvetica neue,open sans,sans-serif">Express</span>
-			<div
-				style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
-			</div>
-			<span class="logo-text">ASP.NET</span>
-		</div>
-	</div>
-
+	</section>
 	<!--- Footer -->
 
 	<div class="d-flex bg-dark justify-content-center" id="footer">
