--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
 						people.
 					</p>
 					<h6>Tech used:</h6>
-					<span class="logo-text">ASP.NET MVC</span>
+					<span class="">ASP.NET MVC</span>
 					<div
 						style="display: inline-block;border-left:2px solid #000;height:20px; margin-left: 12px; margin-right: 12px; margin-top: 15pt">
 					</div>
-					<span class="logo-text">SQL Server</span>
+					<span class="">SQL Server</span>
 					<div
 						style="display: inline-block;border-left:2px solid #000;height:20px; margin-left: 12px; margin-right: 12px; margin-top: 15pt">
 					</div>
-					<span class="logo-text">Bootstrap</span>
+					<span class="">Bootstrap</span>
 				</div>
 
 			</div>
