--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 	</nav>
 
 	<!-- Intro -->
-
 	<div class="d-flex justify-content-center" style="background-color: gray; height: 100vh">
 		<div class="align-self-center align-items-sm-stretch justify-content-center">
 			<h1 class="text-center intro-text" style="">Dan Hansen</h1>
@@ -59,7 +58,7 @@
 		</div>
 	</div>
 
-	<!--- project -->
+	<!--- projects -->
 	<section style="background-color: #f0f0f0">
 		<div class="container justify-content-center" style="background-color: ##f0f0f0">
 			<br>
@@ -109,8 +108,8 @@
 			</div>
 		</div>
 	</section>
-	<!--- Footer -->
 
+	<!--- Footer -->
 	<div class="d-flex bg-dark justify-content-center" id="footer">
 		<br>
 		<br>
@@ -126,9 +125,6 @@
 		<br>
 		<br>
 	</div>
-	<!--- Footer -->
-
-
 
 </body>
 
