worked on project container style

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<!-- Intro -->
 	<div class="d-flex justify-content-center" style="background-color: gray; height: 100vh">
 		<div class="align-self-center align-items-sm-stretch justify-content-center">
-			<h1 class="text-center intro-text" style="">Dan Hansen</h1>
+			<h1 class="text-center intro-text">Dan Hansen</h1>
 			<p class="lead text-center" style="color: whitesmoke">I build software products for large enterprises and
 				small organizations.</p>
 			<div class="d-flex align-self-center justify-content-center">
@@ -59,52 +59,16 @@
 	</div>
 
 	<!--- projects -->
-	<section style="background-color: #f0f0f0">
-		<div class="container justify-content-center" style="background-color: ##f0f0f0">
-			<br>
-			<!-- Top row-->
-			<div class="row justify-content-center">
-				<div class="col-5 col-sm-5 justify-content-center">
-					<h2 class="">Spending Comparison</h2>
-				</div>
-			</div><br>
-
-			<!--Middle row -->
-			<div class="row" style="padding: 10px">
-				<!-- left col -->
-				<div class=" col-5 col-sm">
-					<img src="img/spendingComparison.JPG" style="box-shadow: 2px 2px;">
-				</div>
-				<!-- right col -->
-				<div class="col-5 col-sm">
-					<p>A calculator that uses Bureau of Labor Statistics data to compare your spending to similar
-						people.
-					</p>
-					<h6>Tech used:</h6>
-					<span class="logo-text">ASP.NET MVC</span>
-					<div
-						style="display: inline-block;border-left:2px solid #000;height:20px; margin-left: 12px; margin-right: 12px; margin-top: 15pt">
-					</div>
-					<span class="logo-text">SQL Server</span>
-					<div
-						style="display: inline-block;border-left:2px solid #000;height:20px; margin-left: 12px; margin-right: 12px; margin-top: 15pt">
-					</div>
-					<span class="logo-text">Bootstrap</span>
-				</div>
-
+	<section id="project-section" id="test-1">
+		<div class="project-container" id="test-2">
+			<div class="project-title" id="test-3">
+				<h3>project title</h3>
 			</div>
-
-			<!-- bottom row -->
-			<div class=" logo-text-container d-flex align-self-center justify-content-center">
-				<i class="fab fa-node-js fa-2x"></i>
-				<div
-					style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
-				</div>
-				<span class="logo-text" style="font:helvetica neue,open sans,sans-serif">Express</span>
-				<div
-					style="display: inline-block;border-left:2px solid #000;height:40px; margin-left: 12px; margin-right: 12px">
-				</div>
-				<span class="logo-text">ASP.NET</span>
+			<div class="project-image" id="test-4">
+				<p>img</p>
+			</div>
+			<div class="project-info" id="test-4">
+				<p>desc</p>
 			</div>
 		</div>
 	</section>
