--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 	</nav>
 
 	<!-- Intro -->
-	<div class="d-flex justify-content-center intro-container" id="test-4">
+
+	<div class="d-flex justify-content-center intro-container">
 		<div class="align-self-center align-items-sm-stretch justify-content-center">
 			<h1 class="text-center intro-text">Dan Hansen</h1>
 			<p class="lead text-center" style="color: whitesmoke">I build software products for large enterprises and
