--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Dan Hansen - Software Developer</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+	<
 	<link href="style.css" rel="stylesheet">
 </head>
 
@@ -59,14 +56,15 @@
 		</div>
 	</div>
 
-	<!--- projects -->
+	<!--- projects section -->
 	<section id="project-section" id="test-1">
+		<!--- project -->
 		<div class="project-container" id="test-2">
 			<div class="project-title" id="test-3">
 				<h3>project title</h3>
 			</div>
 			<div class="project-image" id="test-4">
-				<p>img</p>
+				<img src="img/spending-app.jpg">
 			</div>
 			<div class="project-info" id="test-4">
 				<p>desc</p>
@@ -90,7 +88,10 @@
 		<br>
 		<br>
 	</div>
-
+	script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </body>
 
 </html>
