working on project section and getting screenshot image aligned

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Dan Hansen - Software Developer</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	
+
 	<link href="style.css" rel="stylesheet">
 </head>
 
@@ -63,8 +63,8 @@
 			<div class="project-title" id="test-3">
 				<h3>project title</h3>
 			</div>
-			<div class="project-image" id="test-4">
-				<img src="img/spending-app.jpg">
+			<div class="project-image-container" id="test-4">
+				<img class="project-image" src="img/spending-app.jpg">
 			</div>
 			<div class="project-info" id="test-4">
 				<p>desc</p>
