--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Top</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Portfolio</a>
+						<a class="nav-link" href="#project-section">Projects</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">About</a>
@@ -46,7 +43,7 @@
 			<p class="lead text-center" style="color: whitesmoke">I build software products for large enterprises and
 				small organizations.</p>
 			<div class="d-flex align-self-center justify-content-center">
-				<a role="button" class="btn btn-inverse btn-dark" href="#work">View Work</a>
+				<a role="button" class="btn btn-inverse btn-dark" href="#project-section">View Work</a>
 				<div style="display: inline-block; margin-left: 12px; margin-right: 12px">
 				</div>
 				<a role="button" class="btn btn-inverse btn-dark" href="#contact">Contact Me</a>
@@ -57,17 +54,19 @@
 	</div>
 
 	<!--- projects section -->
-	<section id="project-section" id="test-1">
+	<section id="project-section">
 		<!--- project -->
-		<div class="project-container" id="test-2">
-			<div class="project-title" id="test-3">
+		<div class="project-container">
+			<div class="project-title">
 				<h3>project title</h3>
 			</div>
-			<div class="project-image-container" id="test-4">
+			<div class="project-image-container">
 				<img class="project-image" src="img/spending-app.jpg">
 			</div>
-			<div class="project-info" id="test-4">
-				<p>desc</p>
+			<div class="project-info-container">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<div class="project-tech"><p>ASP.NET MVC | SQL Server | Bootstrap | JQuery</p></div>
+				<div class="project-links"><p><strong><a href="">View it live</a> || <a href="">See it on Github</a></strong></p></div>
 			</div>
 		</div>
 	</section>
