--- a/index.html
+++ b/index.html
@@ -55,20 +55,81 @@
 
 	<!--- projects section -->
 	<section id="project-section">
+		<h1>Projects</h1>
 		<!--- project -->
 		<div class="project-container">
 			<div class="project-title">
-				<h3>project title</h3>
+
 			</div>
 			<div class="project-image-container">
 				<img class="project-image" src="img/spending-app.jpg">
 			</div>
 			<div class="project-info-container">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<div class="project-tech"><p>ASP.NET MVC | SQL Server | Bootstrap | JQuery</p></div>
-				<div class="project-links"><p><strong><a href="">View it live</a> || <a href="">See it on Github</a></strong></p></div>
+				<h4>Spending Comparison</h4>
+				<p>This app prompts users to enter their income, region and amounts of spending for different
+					categories. Then it compares them to similar households using data from the Bureau of Labor
+					Statistics. This project got a few hundred hits after I posted a link on Reddit. Feedback was that
+					results need to be graphical, rather than textual. Otherwise, it was well received.</p>
+				<div class="project-tech">
+					<p>ASP.NET MVC | SQL Server | Bootstrap | JQuery</p>
+				</div>
+				<div class="project-links">
+					<p><strong><a href="">View it live</a> || <a href="">Review on Github</a></strong></p>
+				</div>
 			</div>
 		</div>
+		<hr class="project-dividers">
+		<!--- project -->
+		<div class="project-container">
+			<div class="project-title">
+
+			</div>
+			<div class="project-image-container">
+				<img class="project-image" src="img/icmf-site.jpg">
+			</div>
+			<div class="project-info-container">
+				<h4>Foundation Web Site</h4>
+				<p>Basic informational and marketing site. Built on WordPress to allow later edits by foundation board
+					members. Includes contact form, donation link, scholarship and grant applications. Feedback is that
+					some older audience members have trouble navigating the site. Otherwise accepted by the client.</p>
+				<div class="project-tech">
+					<p>WordPress | CSS</p>
+				</div>
+				<div class="project-links">
+					<p><strong><a href="https://www.icmasonicfoundation.org/">View it live</a></strong></p>
+				</div>
+			</div>
+		</div>
+		<hr class="project-dividers">
+		<!--- project -->
+		<div class="project-container">
+			<div class="project-title">
+
+			</div>
+			<div class="project-image-container">
+				<img class="project-image" src="img/spending-app.jpg">
+			</div>
+			<div class="project-info-container">
+				<h4>Project title</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+					et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+					aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+					culpa qui officia deserunt mollit anim id est laborum.</p>
+				<div class="project-tech">
+					<p>ASP.NET MVC | SQL Server | Bootstrap | JQuery</p>
+				</div>
+				<div class="project-links">
+					<p><strong><a href="">View it live</a> || <a href="">See it on Github</a></strong></p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!--- About -->
+	<section id="about-section">
+		<h1>About</h1>
+		<div class="about-description test-3"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
 	</section>
 
 	<!--- Footer -->
