adjusted project titles so they would show in the correct place on mobile

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 		<!--- project -->
 		<div class="project-container">
 			<div class="project-title">
-
+				<h4>Spending Comparison</h4>
 			</div>
 			<div class="project-image-container">
 				<img class="project-image" src="img/spending-app.jpg">
 			</div>
 			<div class="project-info-container">
-				<h4>Spending Comparison</h4>
+				<h4 class="title-in-project-description">Spending Comparison</h4>
 				<p>This app prompts users to enter their income, region and amounts of spending for different
 					categories. Then it compares them to similar households using data from the Bureau of Labor
 					Statistics. This project got a few hundred hits after I posted a link on Reddit. Feedback was that
@@ -82,13 +82,13 @@
 		<!--- project -->
 		<div class="project-container">
 			<div class="project-title">
-
+				<h4>Foundation Web Site</h4>
 			</div>
 			<div class="project-image-container">
 				<img class="project-image" src="img/icmf-site.jpg">
 			</div>
 			<div class="project-info-container">
-				<h4>Foundation Web Site</h4>
+				<h4 class="title-in-project-description">Foundation Web Site</h4>
 				<p>Basic informational and marketing site. Built on WordPress to allow later edits by foundation board
 					members. Includes contact form, donation link, scholarship and grant applications. Feedback is that
 					some older audience members have trouble navigating the site. Otherwise accepted by the client.</p>
@@ -104,13 +104,13 @@
 		<!--- project -->
 		<div class="project-container">
 			<div class="project-title">
-
+				<h4>Project title</h4>
 			</div>
 			<div class="project-image-container">
 				<img class="project-image" src="img/spending-app.jpg">
 			</div>
 			<div class="project-info-container">
-				<h4>Project title</h4>
+				<h4 class="title-in-project-description">Project title</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
 					et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
 					aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
