definitely fixed project descriptions this time

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 				<img class="project-image" src="img/spending-app.jpg">
 			</div>
 			<div class="project-info-container">
-				
+
 				<div>
-						<h4 class="title-in-project-description">Spending Comparison</h4>
+					<h4 class="title-in-project-description">Spending Comparison</h4>
 					<p>This app prompts users to enter their income, region and amounts of spending for different
 						categories. Then it compares them to similar households using data from the Bureau of Labor
 						Statistics. This project got a few hundred hits after I posted a link on Reddit. Feedback was
@@ -133,7 +133,7 @@
 	<!--- About -->
 	<section id="about-section">
 		<h1>About</h1>
-		<div class="about-description test-3">
+		<div class="about-description">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
 				dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
 				ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
