--- a/index.html
+++ b/index.html
@@ -134,11 +134,25 @@
 	<section id="about-section">
 		<h1>About</h1>
 		<div class="about-description">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-				dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-				ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-				fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-				deserunt mollit anim id est laborum.</p>
+
+				<p>Hi! I'm Dan and I've been working in information technology for over 8 years. I have also been
+					designing
+					for print and the web for 20 years. I completed software curriculums from Kirkwood Community
+					College,
+					Pluralsight and freeCodeCamp. I also have a bachelor’s degree and some graduate coursework in
+					e-commerce
+					and marketing.</p>
+				<p>A few facts about me:</p>
+				<ul>
+					<li>I wake up every day at 4:30am to write code and I love it.</li>
+					<li>I have been the top performer in almost every job I’ve ever had.</li>
+					<li>I have read almost every book on personal productivity.</li>
+					<li>I LOVE to create tools to help other people get their work done faster.</li>
+					<li>I am willing to take on the hard projects.</li>
+				</ul>
+<br>
+<br>
+
 		</div>
 	</section>
 
@@ -159,7 +173,6 @@
 		<br>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </body>
