started the contact form section

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 				<ul>
 					<li>I wake up every day at 4:30am to write code and I love it.</li>
 					<li>I have been the top performer in almost every job I’ve ever had.</li>
-					<li>I have read almost every book on personal productivity.</li>
+					<li>I have read almost every mainstream book on personal productivity.</li>
 					<li>I LOVE to create tools to help other people get their work done faster.</li>
 					<li>I am willing to take on the hard projects.</li>
 				</ul>
@@ -156,6 +156,21 @@
 		</div>
 	</section>
 
+	<!-- Contact section -->
+	<section id="contact-section">
+		<div class="contact-form">
+			<form>
+			<div class="form-group">
+			  <label for="exampleInputEmail1">Email address</label>
+			  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+			  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+			</div>
+			
+			
+			<button type="submit" class="btn btn-primary">Submit</button>
+		  </form>
+		</div>
+	</section>
 	<!--- Footer -->
 	<div class="d-flex bg-dark justify-content-center" id="footer">
 		<br>
