--- a/index.html
+++ b/index.html
@@ -135,23 +135,23 @@
 		<h1>About</h1>
 		<div class="about-description">
 
-				<p>Hi! I'm Dan and I've been working in information technology for over 8 years. I have also been
-					designing
-					for print and the web for 20 years. I completed software curriculums from Kirkwood Community
-					College,
-					Pluralsight and freeCodeCamp. I also have a bachelor’s degree and some graduate coursework in
-					e-commerce
-					and marketing.</p>
-				<p>A few facts about me:</p>
-				<ul>
-					<li>I wake up every day at 4:30am to write code and I love it.</li>
-					<li>I have been the top performer in almost every job I’ve ever had.</li>
-					<li>I have read almost every mainstream book on personal productivity.</li>
-					<li>I LOVE to create tools to help other people get their work done faster.</li>
-					<li>I am willing to take on the hard projects.</li>
-				</ul>
-<br>
-<br>
+			<p>Hi! I'm Dan and I've been working in information technology for over 8 years. I have also been
+				designing
+				for print and the web for 20 years. I completed software curriculums from Kirkwood Community
+				College,
+				Pluralsight and freeCodeCamp. I also have a bachelor’s degree and some graduate coursework in
+				e-commerce
+				and marketing.</p>
+			<p>A few facts about me:</p>
+			<ul>
+				<li>I wake up every day at 4:30am to write code and I love it.</li>
+				<li>I have been the top performer in almost every job I’ve ever had.</li>
+				<li>I have read dozens of books on personal productivity.</li>
+				<li>I LOVE to create tools to help other people get their work done faster.</li>
+				<li>I am willing to take on the hard projects.</li>
+			</ul>
+			<br>
+			<br>
 
 		</div>
 	</section>
@@ -160,15 +160,17 @@
 	<section id="contact-section">
 		<div class="contact-form">
 			<form>
-			<div class="form-group">
-			  <label for="exampleInputEmail1">Email address</label>
-			  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-			  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-			</div>
-			
-			
-			<button type="submit" class="btn btn-primary">Submit</button>
-		  </form>
+				<div class="form-group">
+					<label for="exampleInputEmail1">Email address</label>
+					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+						placeholder="Enter email">
+					<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+						else.</small>
+				</div>
+
+
+				<button type="submit" class="btn btn-primary">Submit</button>
+			</form>
 		</div>
 	</section>
 	<!--- Footer -->
