--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				and marketing.</p>
 			<p>A few facts about me:</p>
 			<ul>
-				<li>I wake up every day at 4:30am to write code and I love it.</li>
+				<li>I wake up every day at 4:30am to write code and it's my favorite part of the day.</li>
 				<li>I have been the top performer in almost every job I’ve ever had.</li>
 				<li>I have read dozens of books on personal productivity.</li>
 				<li>I LOVE to create tools to help other people get their work done faster.</li>
