--- a/index.html
+++ b/index.html
@@ -158,20 +158,31 @@
 
 	<!-- Contact section -->
 	<section id="contact-section">
+		<h1>Contact Me</h1>
 		<div class="contact-form">
 			<form>
 				<div class="form-group">
-					<label for="exampleInputEmail1">Email address</label>
-					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-						placeholder="Enter email">
-					<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-						else.</small>
+					<label for="name">Name</label>
+					<input type="text" class="form-control" id="name" placeholder="e.g. Jane Smith">
 				</div>
-
-
+				<div class="form-group">
+					<label for="email-address">Email address</label>
+					<input type="email" class="form-control" id="email-address" placeholder="e.g. Jane@global.com">
+				</div>
+				<div class="form-group">
+					<label for="phone-number">Phone Number</label>
+					<input type="text" class="form-control" id="phone" placeholder="e.g. 555-123-4567">
+				</div>
+				<div class="form-group">
+					<label for="message">Message</label>
+					<textarea name="message" style="width: 100%;" rows="5"
+						placeholder="e.g. This is Jane from GlobalCom and I'd like to discuss a job opportunity..."></textarea>
+				</div>
 				<button type="submit" class="btn btn-primary">Submit</button>
 			</form>
 		</div>
+		<br>
+		<br>
 	</section>
 	<!--- Footer -->
 	<div class="d-flex bg-dark justify-content-center" id="footer">
