set up public directories, imported images and style.  removed EJS because i don't need it.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Dan Hansen - Software Developer</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
-	<link href="style.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,7 +36,6 @@
 	</nav>
 
 	<!-- Intro -->
-
 	<div class="d-flex justify-content-center intro-container">
 		<div class="align-self-center align-items-sm-stretch justify-content-center">
 			<h1 class="text-center intro-text">Dan Hansen</h1>
@@ -55,7 +54,7 @@
 
 	<!--- projects section -->
 	<section id="project-section">
-		<h1>Projects</h1>
+		<br><br><h1>Projects</h1>
 		<!--- project -->
 		<div class="project-container">
 			<div class="project-title">
@@ -160,7 +159,7 @@
 	<section id="contact-section">
 		<h1>Contact Me</h1>
 		<div class="contact-form">
-			<form>
+			<form method="POST" action="/send">
 				<div class="form-group">
 					<label for="name">Name</label>
 					<input type="text" class="form-control" id="name" placeholder="e.g. Jane Smith">
